--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -51,7 +51,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="22dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="@string/app_name"
+        android:text="Screen time reducing"
         android:textColor="@color/black"
         android:textSize="40dp" />
 
