--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/app_name"
+        android:text="@string/screen_time_reducing"
         android:textColor="@color/black"
         android:textSize="30dp"
         tools:ignore="SpUsage" />
